pagina de inicio con datos

--- a/demo1/templates/demo1/principal.html
+++ b/demo1/templates/demo1/principal.html
@@ -7,28 +7,47 @@
             <h1><a href="/">Home de Combi19</a></h1>
         </div>
         <div>
+            {{administrador}}
+        </div>
+        <div>
+            <h2><a href="">Usuarios</a></h2>
+            {{usuarios}}
+        </div>
+        <div>
+            <h2><a href="">Personas</a></h2>
+            {{personas}}
+        </div>
+        <div>
             <h2><a href="">Choferes</a></h2>
+            {{choferes}}
         </div>
         <div>
             <h2><a href="">Pasajeros</a></h2>
+            {{pasajeros}}
         </div>
         <div>
             <h2><a href="">Combis</a></h2>
+            {{combis}}
         </div>
         <div>
             <h2><a href="">Viajes</a></h2>
+            {{viajes}}
         </div>
         <div>
             <h2><a href="">Insumos</a></h2>
+            {{insumos}}
         </div>
         <div>
             <h2><a href="">Rutas</a></h2>
+            {{rutas}}
         </div>
         <div>
             <h2><a href="">Lugares</a></h2>
+            {{Lugares}}
         </div>
         <div>
             <h2><a href="">Tarjetas</a></h2>
+            {{tarjetas}}
         </div>
     </body>
 </html>
