listado y agregar lugar

--- a/demo1/templates/demo1/base_form.html
+++ b/demo1/templates/demo1/base_form.html
@@ -1,20 +1,20 @@
 {% load static %}
 <html>
     <head >
-        <title>Home</title>
+        <title>Lugar</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/demo1.css' %}">
     </head>
     <body>
         <div class="page-header">
-            <h1>Home de Combi19</h1>
+            <h1>Nuevo Lugar</h1>
         </div>
         <div>
-            <div class="content container">
-                {% block content %}
+            <div class="formu container">
+                {% block formu %}
                 {% endblock %}
-            </div>  
+            </div>
         </div>
     </body>
 </html>
