agrego detalle para todas las clases menos para persona que es abstracta

--- a/demo1/templates/demo1/listados/listado_chofer.html
+++ b/demo1/templates/demo1/listados/listado_chofer.html
@@ -5,7 +5,7 @@
     <div>
         <ul>
         {% for chofer in choferes %}
-            <li><a href="">{{ chofer }}</a></li>
+            <li><a href="{% url 'detalle_chofer' pk=chofer.pk%}">{{ chofer }}</a></li>
         {% endfor %}
         </ul>
     </div>
