--- a/demo1/templates/demo1/listados/listado_tarjeta.html
+++ b/demo1/templates/demo1/listados/listado_tarjeta.html
@@ -5,7 +5,7 @@
     <div>
         <ul>
         {% for tarjeta in tarjetas %}
-            <li><a href="">{{ tarjeta }}</a></li>
+            <li><a href="{% url 'detalle_tarjeta' pk=tarjeta.pk%}">{{ tarjeta }}</a></li>
         {% endfor %}
         </ul>
     </div>
