--- a/demo1/templates/demo1/formulario_usuario.html
+++ b/demo1/templates/demo1/formulario_usuario.html
@@ -5,7 +5,7 @@
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p}}
-        <button type="submit" class="save btn btn-default">Registrar</button>
+        <button type="submit" class="save btn btn-default" formaction="http://127.0.0.1:8000/login/">Registrar</button>
     </form>
     <h2><a href="{% url 'principal' %}"> salir</a></h2>
 {% endblock %}
