--- a/demo1/templates/demo1/principal.html
+++ b/demo1/templates/demo1/principal.html
@@ -6,7 +6,10 @@
               <h2><a href="{% url 'listado_usuario'%}">Usuarios</a></h2>
             </div>
               <h2><a href="{% url 'listado_persona' %}">Personas</a></h2>
+            <div>
               <h2><a href="{% url 'listado_chofer' %}">Choferes</a></h2>
+              <p><a href="{% url 'chofer_new' %}">Agregar chofer</a></p>
+            </div>
               <h2><a href="{% url 'listado_pasajero' %}">Pasajeros</a></h2>
               <h2><a href="{% url 'listado_combi' %}">Combis</a></h2>
               <h2><a href="{% url 'listado_viaje'%}">Viajes</a></h2>
