--- a/demo1/templates/demo1/form/formulario_lugar.html
+++ b/demo1/templates/demo1/form/formulario_lugar.html
@@ -1,8 +1,12 @@
 {% extends 'demo1/base_form.html' %}
 
 {% block formu %}
+<div class="page-header">
+    <h1>Nuevo Lugar</h1>
+</div>
+<div>
+    <div class="formu container">
     <div>
-        <h2>Nuevo lugar</h2>
         <form method="POST" class="post-form">
             {% csrf_token %}
             {{ form.as_p}}
@@ -12,4 +16,8 @@
     <div>
         <h2><a href="{% url 'principal' %}"> salir</a></h2>
     </div>
+    </div>
+</div>
+
 {% endblock %}
+
