Hice algunas modificaciones

--- a/demo1/templates/demo1/detalle/detalle_pasajero.html
+++ b/demo1/templates/demo1/detalle/detalle_pasajero.html
@@ -4,7 +4,7 @@
     <div class="pasajero">
         <h4><a href="">{{p}}</a></h4>
         {% for p in pasajero%}
-            <p>nombre de pasajero: {{ p.usuario.username }}</div>
+            <p>nombre de usuario: {{ p.usuario.username }}</div>
             <p>nombre: {{ p.usuario.first_name }}</p>
             <p>Apellido: {{ p.usuario.last_name }}</p>
             <p>Email: {{ p.usuario.email }}</p>
