--- a/demo1/templates/demo1/principal.html
+++ b/demo1/templates/demo1/principal.html
@@ -1,21 +1,23 @@
 {% extends 'demo1/base.html' %}
    {% block content %}
-        {% for admini in administrador %} {{ admini }}{% endfor %}
+       <!-- {% for admini in administrador %} {{ admini }}{% endfor %}-->
           <ul>
-            <div>
+            <!--<div>
               <h2><a href="{% url 'listado_usuario'%}">Usuarios</a></h2>
             </div>
-              <h2><a href="{% url 'listado_persona' %}">Personas</a></h2>
-              <h2><a href="{% url 'listado_chofer' %}">Choferes</a></h2>
-              <h2><a href="{% url 'listado_pasajero' %}">Pasajeros</a></h2>
-              <h2><a href="{% url 'listado_combi' %}">Combis</a></h2>
-              <h2><a href="{% url 'listado_viaje'%}">Viajes</a></h2>
-              <h2><a href="{% url 'listado_insumo'%}">Insumos</a></h2>
-              <h2><a href="{% url 'listado_ruta'%}">Rutas</a></h2>
-            <div>
-              <h2><a href="{% url 'listado_lugar'%}">Lugares</a></h2>
-              <p><a href="{% url 'lugar_new' %}">Agregar Lugar</a></p>
+              <h2><a href="{% url 'listado_persona' %}">Personas</a></h2>-->
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_chofer' %}">Choferes</a></h2>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_pasajero' %}">Pasajeros</a></h2>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_combi' %}">Combis</a></h2>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_viaje'%}">Viajes</a></h2>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_insumo'%}">Insumos</a></h2>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_ruta'%}">Rutas</a></h2>
+              
+            <div id= "header">
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_lugar'%}">Lugares</a> </h2>&nbsp;<a href="{% url 'lugar_new' %}">Agregar Lugar</a>
+              <!--<p><a href="{% url 'lugar_new' %}">Agregar Lugar</a></p>-->
+              <!--<hr />-->
             </div>
-              <h2><a href="{% url 'listado_tarjeta' %}">Tarjetas</a></h2>
+              <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'listado_tarjeta' %}">Tarjetas</a></h2>
           </ul>
      {% endblock %}
