--- a/demo1/static/css/demo1.css
+++ b/demo1/static/css/demo1.css
@@ -8,7 +8,7 @@ h1 a, h2 a {
     font-size: 36pt;
     text-decoration: none;
 }
-
+#header h2 { display:inline; }
 
 .content {
     margin-left: 40px;
