--- a/demo1/templates/demo1/base.html
+++ b/demo1/templates/demo1/base.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="page-header">
-            <h1>Home de Combi19</h1>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Menú principal de Administración de Combi19</h1>
         </div>
         <div>
             <div class="content container">
