--- a/demo1/templates/demo1/base.html
+++ b/demo1/templates/demo1/base.html
@@ -8,8 +8,10 @@
     </head>
     <body>
         <div class="page-header">
-            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Menú principal de Administración de Combi19</h1>
+            <h1>Menú administrativo de Combi19</h1>
         </div>
+        <div class="card"><h4><a href="">Cerrar sesion administrador</a> </h4> </div>
+        <br>
         <div>
             <div class="content container">
                 {% block content %}
