Formularios de los agregar

--- a/demo1/templates/demo1/principal.html
+++ b/demo1/templates/demo1/principal.html
@@ -7,14 +7,19 @@
               <a href="{% url 'chofer_new' %}">Agregar chofer</a>
               <br><br>
               <h2><a href="{% url 'listado_pasajero' %}">Pasajeros</a></h2>
+              <a href="">Agregar pasajero</a>
               <br><br>
               <h2><a href="{% url 'listado_combi' %}">Combis</a></h2>
+              <a href="{% url 'combi_new' %}">Agregar combi</a>
               <br><br>
               <h2><a href="{% url 'listado_viaje'%}">Viajes</a></h2>
+              <a href="{% url 'viaje_new' %}">Agregar viajes</a>
               <br><br>
               <h2><a href="{% url 'listado_insumo'%}">Insumos</a></h2>
+              <a href="{% url 'insumo_new' %}">Agregar insumo</a>
               <br><br>
               <h2><a href="{% url 'listado_ruta'%}">Rutas</a></h2>
+              <a href=" {% url 'ruta_new' %} ">Agregar ruta</a>
               <br><br>
               <h2><a href="{% url 'listado_lugar'%}">Lugares</a></h2>
               <a href="{% url 'lugar_new' %}">Agregar Lugar</a>
