--- a/demo1/templates/demo1/form/formulario_lugar.html
+++ b/demo1/templates/demo1/form/formulario_lugar.html
@@ -12,6 +12,16 @@
             {{ form.as_p}}
             <button type="submit" class="guardar lugar">Guardar</button>
         </form>
+        {% if fallido %}
+        <div>
+            <p> El Lugar ya se encuentra registrado</p>
+        </div>
+        {% endif %}
+        {% if exitoso %}
+        <div>
+            <p> La carga se realizo con exito</p>
+        </div>
+        {% endif %}
     </div>
     <div>
         <h2><a href="{% url 'principal' %}"> salir</a></h2>
