--- a/demo1/templates/demo1/detalle/detalle_lugar.html
+++ b/demo1/templates/demo1/detalle/detalle_lugar.html
@@ -12,6 +12,6 @@
         {%endfor%}   
     </div>
     <div class="card">
-        <h2><a href="{% url 'principal' %}"> salir</a></h2>
+        <h3><a href="{% url 'listado_lugar'%}"> Atras</a></h3>
     </div>
 {% endblock %}
