--- a/demo1/templates/demo1/login.html
+++ b/demo1/templates/demo1/login.html
@@ -6,6 +6,16 @@
       {{ form.as_p}}
       <button class="btn btn-primary" type="submit">Login</button>
     </form>
+    {% if falloU %}
+      <div>
+        <p>Email no registrado</p>
+      </div>
+    {% endif %}
+    {% if falloP %}
+      <div>
+        <p>Contraseña incorrecta</p>
+      </div>
+    {% endif %}
     <p class="text-center">Si no tiene una cuenta puede registrarse aqui <a href="/registrar">Crear Cuenta</a>.</p>
 {% endblock %}
 
